1.2b8
- More printing improvements
- Clicking on a note on the piano at the left of the score editor now plays the note

1.2b7
- fixed bug when loading file that used a magnetic grid size from drop-down menu and not visible on the widget
- fixed drawing dead notes (X)
- improved print layout
- improved look of printed note heads
- improved look of printed tabs
- improved printing of triplets and ties
- printing is now non-linear
- fixed vertical centering of tracks + fixed assertion failure
- hide empty lines when printing
- improved silence printing
- fixed rendering dotted notes
- cleaned up preferences implementation
- added an option to automatically launch TiMidity and pick port on linux

1.2b6
- Printing improvements :
    - Better G clef on printed scores
    - Added F clef render on printed scores
    - Added dotted silence rendering
    - Printing : fixed vertical measure dividers to play nicely with scores
    - Fixed crash when printing a single track
    - Key signature now appears on printed scores
    - Marked repetition detection as experimental, disabled by default
    - Fixed printing of notes above/below score (previously broken)
    - Further improved vertical division of space
    - Time signature changes are now printed
    - Now shows ottava bassa/alta signs
    - Added support for printing triplet silences
    - Fixed bug where random notes would appear at the far right of the page
    - Fixed rendering notes with more than 1 flags (was broken when not beamed)
    - Fixed bug where notes would appear at the far left of the page and not in their measure

1.2b5
- More minor linux fixes
- Added Code::Blocks project
- Fixed crash when clicking below last track
- Major refactor of render system : allow software rendering where OpenGL is not optimal
- Fixed multiple printing-related crashes and infinite recursions
- Removed GLUT dependency from OpenGL renderer. consequence : anti-aliased fonts and better Linux support.